# image-filter

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.mimocode/plans/: 1781226306224-witty-lagoon.md
scripts/: build-latest-json.js  export_clip_model.py  fix_invoke2.cjs  fix_ort.cjs  fix_ort_dynamic.cjs  generate-changelog.sh  generate-latest-json.sh  run_export_model.ps1  run_export_model.sh  tauri-env.cjs  upload-updater-artifacts.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/onnxruntime/: osx-arm64.tgz  osx-universal2.tgz
src-tauri/onnxruntime/osx-universal2/: libonnxruntime.dylib
src-tauri/onnxruntime/win-x64/: onnxruntime.lib
src-tauri/src/: face_detector.rs  main.rs  quality_analyzer.rs  thumbnail_cache.rs  waste_detector.rs  wedding_analyzer.rs
src-tauri/src/commands/: ai.rs  filesystem.rs  image.rs  mod.rs  updater.rs
src-tauri/src/image_decoder/: mod.rs  raw.rs  regular.rs
src/components/: AiPanel.vue  Breadcrumb.vue  DirectoryTree.vue  ExportDialog.vue  GroupDialog.vue  GroupManager.vue  ImageGrid.vue  ImagePreview.vue  SelectedImagesView.vue  StatusBar.vue
src/stores/: app.ts
src/types/: index.ts
