[package]
name = "image-filter"
version = "1.0.0"
description = "A Tauri app for filtering and selecting images"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
ort = "2.0.0-rc.12"
ndarray = "0.17"
tauri-plugin-http = "2.5.9"
zip = "8.6.0"
